# ctrip-backend

./: .env  Dockerfile  main.py  pyproject.toml
app/: config.py  log.py
app/aichat/: flight_chat.py
app/api/: ctripapi.py
app/crawler/: __init__.py  ctrip.py
app/database/: __init__.py  database.py  models.py
resource/: city.json  ctrip.http
