[project]
name = "ctrip-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.2",
    "fastapi[standard]>=0.115.11",
    "langchain>=0.3.20",
    "langchain-deepseek>=0.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydash>=8.0.5",
    "pymysql>=1.1.1",
    "sqlmodel>=0.0.23",
]
